--- a/client/keystore/Cargo.toml
+++ b/client/keystore/Cargo.toml
@@ -23,6 +23,7 @@ parking_lot = "0.10.0"
 rand = "0.7.2"
 serde_json = "1.0.41"
 subtle = "2.1.1"
+log = "0.4"
 
 [dev-dependencies]
 tempfile = "3.1.0"
